tests/Tuc/Fixtures/errors/TucMustHaveName.tuc
tuc
participants
    GenericService parts

GenericService
